update page ecoss

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/scan_qr.png
+    - assets/transaction_history.png
